--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -42,4 +42,5 @@ jobs:
           cd dex.sendrave.com
           composer update --ignore-platform-reqs
           php artisan storage:link
+          php artisan key:generate
         
