--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,4 +43,5 @@ jobs:
           composer update --ignore-platform-reqs
           php artisan storage:link
           php artisan key:generate
+          php artisan migrate 
          
